# amar47shah.github.com

./: .gitmodules  about.html  about.rst  archive.html  blog.cabal  circle.yml  index.html  site.hs
css/: default.css  theprofessional.css
pages/: lambdaconf-yarvin-call-for-feedback.html  lambdaconf-yarvin-response-to-feedback.html
posts/: 2016-03-28-lambdaconf-yarvin.html  2016-03-28-lambdaconf-yarvin.markdown  2016-08-06-point-free-part-1.html  2016-08-06-point-free-part-1.markdown  2016-08-28-point-free-part-2.html  2016-08-28-point-free-part-2.markdown
templates/: default.html
