name:                blog
version:             0.1.0.0
synopsis:            Hakyll project template from stack
description:         Please see README.md
homepage:            http://github.com/amar47shah/blog#readme
license:             BSD3
license-file:        LICENSE
author:              Amar Shah
maintainer:          amar47shah@gmail
copyright:           (c) 2016- Amar Shah
category:            blog
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base == 4.*,
                       hakyll == 4.7.*
